--- a/AnusithExpress.web.mvc/Web.config
+++ b/AnusithExpress.web.mvc/Web.config
@@ -51,6 +51,6 @@
     </providers>
   </entityFramework>
 <connectionStrings>
-  <add name="Dbconnectionstring" connectionString="data source = DESKTOP-AIGGNTO; initial catalog = AnousithLogistic; integrated security=true;" providerName="System.Data.SqlClient" />
+  <add name="Dbconnectionstring" connectionString="data source = DESKTOP-G53NHCF\SQL2008; initial catalog = AnousithLogistic; integrated security=true;" providerName="System.Data.SqlClient" />
 </connectionStrings>
 </configuration>
