--- a/AnousithExpress.Data/AnousithExpress.Data.csproj
+++ b/AnousithExpress.Data/AnousithExpress.Data.csproj
@@ -56,9 +56,9 @@
     <Compile Include="Interfaces\IDBInitiate.cs" />
     <Compile Include="Interfaces\IItems.cs" />
     <Compile Include="Interfaces\ISystemUser.cs" />
-    <Compile Include="Migrations\201806111638003_initial.cs" />
-    <Compile Include="Migrations\201806111638003_initial.Designer.cs">
-      <DependentUpon>201806111638003_initial.cs</DependentUpon>
+    <Compile Include="Migrations\201806120932005_AnousithLogistic.cs" />
+    <Compile Include="Migrations\201806120932005_AnousithLogistic.Designer.cs">
+      <DependentUpon>201806120932005_AnousithLogistic.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\TbConsolidatedItems.cs" />
@@ -90,8 +90,8 @@
     <Folder Include="TableViewModels\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201806111638003_initial.resx">
-      <DependentUpon>201806111638003_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201806120932005_AnousithLogistic.resx">
+      <DependentUpon>201806120932005_AnousithLogistic.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
