fix delivery view

--- a/AnousithExpress.Data/AnousithExpress.Data.csproj
+++ b/AnousithExpress.Data/AnousithExpress.Data.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\201806130717045_initial1.Designer.cs">
       <DependentUpon>201806130717045_initial1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806131502064_initial2.cs" />
+    <Compile Include="Migrations\201806131502064_initial2.Designer.cs">
+      <DependentUpon>201806131502064_initial2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\TbConsolidatedItems.cs" />
     <Compile Include="Models\TbConsolidateList.cs" />
@@ -78,10 +82,12 @@
     <Compile Include="Models\TbTime.cs" />
     <Compile Include="Models\TbUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SingleViewModels\AdminViewModel.cs" />
     <Compile Include="SingleViewModels\CustomerItemModel.cs" />
     <Compile Include="SingleViewModels\CustomerProfileModel.cs" />
     <Compile Include="SingleViewModels\CustomerSingleModel.cs" />
     <Compile Include="SingleViewModels\ItemSingleModel.cs" />
+    <Compile Include="SingleViewModels\Notification.cs" />
     <Compile Include="SingleViewModels\UserSingleModel.cs" />
     <Compile Include="UtilityClasses\CustomerUtility.cs" />
     <Compile Include="UtilityClasses\ItemsUtility.cs" />
@@ -99,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806130717045_initial1.resx">
       <DependentUpon>201806130717045_initial1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806131502064_initial2.resx">
+      <DependentUpon>201806131502064_initial2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
