--- a/AnousithExpress.Data/AnousithExpress.Data.csproj
+++ b/AnousithExpress.Data/AnousithExpress.Data.csproj
@@ -48,11 +48,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityContext.cs" />
+    <Compile Include="Implementation\CustomerListService.cs" />
     <Compile Include="Implementation\CustService.cs" />
     <Compile Include="Implementation\InitiatingService.cs" />
     <Compile Include="Implementation\ItemService.cs" />
     <Compile Include="Implementation\SystemUserService.cs" />
     <Compile Include="Interfaces\ICustomer.cs" />
+    <Compile Include="Interfaces\ICustomerList.cs" />
     <Compile Include="Interfaces\IDBInitiate.cs" />
     <Compile Include="Interfaces\IItems.cs" />
     <Compile Include="Interfaces\ISystemUser.cs" />
@@ -91,7 +93,7 @@
     <Compile Include="SingleViewModels\CustomerProfileModel.cs" />
     <Compile Include="SingleViewModels\CustomerSingleModel.cs" />
     <Compile Include="SingleViewModels\ItemSingleModel.cs" />
-    <Compile Include="SingleViewModels\Notification.cs" />
+    <Compile Include="SingleViewModels\CustomerNotification.cs" />
     <Compile Include="SingleViewModels\UserSingleModel.cs" />
     <Compile Include="UtilityClasses\CustomerUtility.cs" />
     <Compile Include="UtilityClasses\ItemsUtility.cs" />
