--- a/AnusithExpress.web.mvc/AnusithExpress.web.mvc.csproj
+++ b/AnusithExpress.web.mvc/AnusithExpress.web.mvc.csproj
@@ -240,6 +240,7 @@
     <Content Include="Views\Shared\_Navbar.cshtml" />
     <Content Include="Views\Shared\_NavMenu.cshtml" />
     <Content Include="Views\Shared\_Profile.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
