--- a/AnusithExpress.web.mvc/AnusithExpress.web.mvc.csproj
+++ b/AnusithExpress.web.mvc/AnusithExpress.web.mvc.csproj
@@ -246,6 +246,7 @@
     <Content Include="Views\AdminAccount\CreateUpdateAccount.cshtml" />
     <Content Include="Views\Admin\Customer.cshtml" />
     <Content Include="Views\Admin\CustomerDetail.cshtml" />
+    <Content Include="Views\Admin\CreateUpdateItem.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
