--- a/AnousithExpress.Data/AnousithExpress.Data.csproj
+++ b/AnousithExpress.Data/AnousithExpress.Data.csproj
@@ -48,11 +48,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityContext.cs" />
+    <Compile Include="Implementation\ConsolidatedService.cs" />
     <Compile Include="Implementation\CustomerListService.cs" />
     <Compile Include="Implementation\CustService.cs" />
     <Compile Include="Implementation\InitiatingService.cs" />
     <Compile Include="Implementation\ItemService.cs" />
     <Compile Include="Implementation\SystemUserService.cs" />
+    <Compile Include="Interfaces\IConsolidation.cs" />
     <Compile Include="Interfaces\ICustomer.cs" />
     <Compile Include="Interfaces\ICustomerList.cs" />
     <Compile Include="Interfaces\IDBInitiate.cs" />
@@ -93,6 +95,8 @@
     <Compile Include="Models\TbUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingleViewModels\AdminViewModel.cs" />
+    <Compile Include="SingleViewModels\ConsolidatedItemsModel.cs" />
+    <Compile Include="SingleViewModels\ConsolidateSingleModel.cs" />
     <Compile Include="SingleViewModels\CustomerItemModel.cs" />
     <Compile Include="SingleViewModels\CustomerProfileModel.cs" />
     <Compile Include="SingleViewModels\CustomerSingleModel.cs" />
