--- a/AnousithExpress.web.mvc/packages.config
+++ b/AnousithExpress.web.mvc/packages.config
@@ -2,6 +2,11 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="Crystal.Reports" version="13.0.15.1840" targetFramework="net461" />
+  <package id="Crystal.Reports.Essentials" version="13.0.20.2399" targetFramework="net461" />
+  <package id="CrystalDecisions.CrystalReports.Engine" version="1.0.0" targetFramework="net461" />
+  <package id="CrystalDecisions.ReportAppServer" version="1.0.0" targetFramework="net461" />
+  <package id="CrystalDecisions.ReportSource" version="1.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
@@ -18,6 +23,7 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.5" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
