--- a/AnousithExpress.web.mvc/AnousithExpress.web.mvc.csproj
+++ b/AnousithExpress.web.mvc/AnousithExpress.web.mvc.csproj
@@ -204,6 +204,24 @@
     <Compile Include="Reports\BarCodePage.aspx.designer.cs">
       <DependentUpon>BarCodePage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Reports\ConsolidationAllReport.aspx.cs">
+      <DependentUpon>ConsolidationAllReport.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reports\ConsolidationAllReport.aspx.designer.cs">
+      <DependentUpon>ConsolidationAllReport.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\ConsolidationDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ConsolidationDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\ConsolidationListReport.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ConsolidationListReport.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Reports\ItemBarCode.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -1474,6 +1492,7 @@
     <Content Include="LaoFont\phetsarath_ot.svg" />
     <Content Include="LaoFont\style.css" />
     <Content Include="Reports\BarCodePage.aspx" />
+    <Content Include="Reports\ConsolidationAllReport.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -1772,6 +1791,17 @@
     <Content Include="Reports\ItemBarcodeDataSet.xsc">
       <DependentUpon>ItemBarcodeDataSet.xsd</DependentUpon>
     </Content>
+    <Content Include="Reports\ConsolidationDataSet.xsc">
+      <DependentUpon>ConsolidationDataSet.xsd</DependentUpon>
+    </Content>
+    <None Include="Reports\ConsolidationDataSet.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ConsolidationDataSet.Designer.cs</LastGenOutput>
+    </None>
+    <Content Include="Reports\ConsolidationDataSet.xss">
+      <DependentUpon>ConsolidationDataSet.xsd</DependentUpon>
+    </Content>
     <None Include="Reports\ItemBarcodeDataSet.xsd">
       <SubType>Designer</SubType>
       <Generator>MSDataSetGenerator</Generator>
@@ -1894,6 +1924,8 @@
     <Content Include="Views\Admin\ConsolidationCreate.cshtml" />
     <Content Include="Views\Admin\CreateCustomer.cshtml" />
     <Content Include="Views\Admin\ItemHistory.cshtml" />
+    <Content Include="Views\Admin\ConsolidateAllConsolidate.cshtml" />
+    <Content Include="Views\Admin\ConsolidationAllReport.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -1919,6 +1951,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Reports\ConsolidationListReport.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>ConsolidationListReport.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reports\ItemBarCode.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>ItemBarCode.cs</LastGenOutput>
