--- a/AnousithExpress.web.mvc/AnousithExpress.web.mvc.csproj
+++ b/AnousithExpress.web.mvc/AnousithExpress.web.mvc.csproj
@@ -201,6 +201,9 @@
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\DeliveryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\TbPricesController.cs" />
+    <Compile Include="Controllers\TbRoutesController.cs" />
+    <Compile Include="Controllers\TbTimesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1903,6 +1906,21 @@
     <Content Include="Views\Admin\ConsolidationCreate.cshtml" />
     <Content Include="Views\Admin\CreateCustomer.cshtml" />
     <Content Include="Views\Admin\ItemHistory.cshtml" />
+    <Content Include="Views\TbRoutes\Create.cshtml" />
+    <Content Include="Views\TbRoutes\Delete.cshtml" />
+    <Content Include="Views\TbRoutes\Details.cshtml" />
+    <Content Include="Views\TbRoutes\Edit.cshtml" />
+    <Content Include="Views\TbRoutes\Index.cshtml" />
+    <Content Include="Views\TbPrices\Create.cshtml" />
+    <Content Include="Views\TbPrices\Delete.cshtml" />
+    <Content Include="Views\TbPrices\Details.cshtml" />
+    <Content Include="Views\TbPrices\Edit.cshtml" />
+    <Content Include="Views\TbPrices\Index.cshtml" />
+    <Content Include="Views\TbTimes\Create.cshtml" />
+    <Content Include="Views\TbTimes\Delete.cshtml" />
+    <Content Include="Views\TbTimes\Details.cshtml" />
+    <Content Include="Views\TbTimes\Edit.cshtml" />
+    <Content Include="Views\TbTimes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
