--- a/AnousithExpress.web.mvc/AnousithExpress.web.mvc.csproj
+++ b/AnousithExpress.web.mvc/AnousithExpress.web.mvc.csproj
@@ -201,9 +201,9 @@
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\DeliveryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\TbPricesController.cs" />
-    <Compile Include="Controllers\TbRoutesController.cs" />
-    <Compile Include="Controllers\TbTimesController.cs" />
+    <Compile Include="Controllers\PricesController.cs" />
+    <Compile Include="Controllers\RoutesController.cs" />
+    <Compile Include="Controllers\TimesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1406,7 +1406,7 @@
     <Content Include="assets\fonts\icomoon\index.html" />
     <Content Include="assets\fonts\index.html" />
     <Content Include="assets\fonts\themify.svg" />
-    <Content Include="assets\Image\anoutsithlogo.png" />
+    <Content Include="assets\Image\logo.png" />
     <Content Include="assets\Image\user-male-icon.png" />
     <Content Include="assets\js\bootstrap-datepicker.js" />
     <Content Include="assets\js\bootstrap.js" />
@@ -1936,6 +1936,21 @@
     <Content Include="Views\Admin\ConsolidationCreate.cshtml" />
     <Content Include="Views\Admin\CreateCustomer.cshtml" />
     <Content Include="Views\Admin\ItemHistory.cshtml" />
+    <Content Include="Views\Times\Create.cshtml" />
+    <Content Include="Views\Times\Delete.cshtml" />
+    <Content Include="Views\Times\Details.cshtml" />
+    <Content Include="Views\Times\Edit.cshtml" />
+    <Content Include="Views\Times\Index.cshtml" />
+    <Content Include="Views\Routes\Create.cshtml" />
+    <Content Include="Views\Routes\Delete.cshtml" />
+    <Content Include="Views\Routes\Details.cshtml" />
+    <Content Include="Views\Routes\Edit.cshtml" />
+    <Content Include="Views\Routes\Index.cshtml" />
+    <Content Include="Views\Prices\Create.cshtml" />
+    <Content Include="Views\Prices\Delete.cshtml" />
+    <Content Include="Views\Prices\Details.cshtml" />
+    <Content Include="Views\Prices\Edit.cshtml" />
+    <Content Include="Views\Prices\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
